methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:71: error: Unmatched closing brace '}' ignored here
}
^